 To Do: maybe call a2p and perl for faster filters?
#15 July 10, 1998
 - .ploverc is now placed in the home directory (~/)
 - only the selected vectors (not all) in the right pane are plotted
 - selection can be inverted
 - mc-like key bindings
 - vector options dialogs changed
#16 July 15, 1998
 - right-click support
 - several refinements
 - readme file extended
#17 July 15, 1998
 - bugfixes
#18 July 21, 1998
 - bugfixes: [],{} in select/replace dialogs; popup menus extended;
   minor bug in winavgN filter corrected; selected vectors now remain
   selected after operations on them.
#19 July 24, 1998
 - statusbar added at bottom of panes;
 - TAB key binding corrected;
 - 'Vector options' dialog now correctly works for multiple selected
   vectors
#20 August 23, 1998
 - plove.bat added
 - widgets.tcl updated
#21 Jan 1, 1999
 - small fixes
#22 June 21, 1999
 - all sources checked in under CVS
 - added a small, almost dummy Makefile.in
 - version.log renamed to ChangeLog
July 17, 1999
 - added slash/backslash option for gnuplot on Windows
------ omnetpp-2.0b2 released ------
Jan 18, 2000
 - bugfix: Plove hung on selecting filters
------ omnetpp-2.0b3 released ------
Apr 5, 2000
 - Makefile.vc now creates plove.bat (requires correct WISH= setting in
   configuser.vc)
May 7, 2000
 - plove now starts using the classic trick to avoid a hardcoded 'wish' path
   (check top of the 'plove' file).
------ omnetpp-2.0b4 released ------
------ omnetpp-2.0b5 released ------
Aug 26, 2000
 - modified startup code
Aug 29, 2000
 - Makefile.vc modified: generated plove.bat now passes command-line parameters
   to Plove
------ omnetpp-2.0 released ------
------ omnetpp-2.0p1 released ------
Mar 24, 2001
 - now you can build a single Plove executable, with all Tcl code compiled in.
   This made it necessary to reorganize the makefiles too.
Apr 3, 2001
 - fix: the ap window didn't acquire focus on startup (added deiconify command)
Apr 16, 2001
 - added plove.ico